# PGLMS

./: CMakeLists.txt  README.md
Shaders/: default.fs  default.vs  text.fs
include/: shape.h
include/glad/: glad.h
src/: glad.c  imgui.cpp  main.cpp  shader.cpp  shader.h  shape.cpp
